src/objects/AdditionalAccountFields__c.object
<CustomObject>
    <description>SFDC1-785 This is a separate Object created for capturing fields that are a 1:1 relationship with Account but are not attributes that we would consider governing. Many of these fields originated from the multitude of fields found on the account form in Legacy IHS.</description>
    <fields>
        <fullName>AccountReference__c</fullName>
        <inlineHelpText>Lookup Reference of the account connected to the Additional Account Fields</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Additional Account Fields (Account)</relationshipLabel>
        <relationshipName>AdditionAccountFields</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BackOfficeSystem__c</fullName>
        <description>SFDC1-785 Addition Account Fields - General Info</description>
        <label>Back Office System</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advent</fullName>
                </value>
                <value>
                    <fullName>Advent APX</fullName>
                </value>
                <value>
                    <fullName>Advent Geneva</fullName>
                </value>
                <value>
                    <fullName>Asset Arena (Invest One)</fullName>
                </value>
                <value>
                    <fullName>Avaloq</fullName>
                </value>
                <value>
                    <fullName>Calypso</fullName>
                </value>
                <value>
                    <fullName>Clearwater</fullName>
                </value>
                <value>
                    <fullName>Digia Asset Manager (Samstock)</fullName>
                </value>
                <value>
                    <fullName>DST GPS</fullName>
                </value>
                <value>
                    <fullName>DST - HiPort</fullName>
                </value>
                <value>
                    <fullName>Eagle Price</fullName>
                </value>
                <value>
                    <fullName>Eagle SRM</fullName>
                </value>
                <value>
                    <fullName>Eagle STAR</fullName>
                </value>
                <value>
                    <fullName>Finacle</fullName>
                </value>
                <value>
                    <fullName>Findur Openlink</fullName>
                </value>
                <value>
                    <fullName>Finnova</fullName>
                </value>
                <value>
                    <fullName>FMC</fullName>
                </value>
                <value>
                    <fullName>Geneva</fullName>
                </value>
                <value>
                    <fullName>Indus Valley Partners (I.V.P.)</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Internally Developed</fullName>
                </value>
                <value>
                    <fullName>InvestOne</fullName>
                </value>
                <value>
                    <fullName>Linedata - Chorus</fullName>
                </value>
                <value>
                    <fullName>Linedata - ICON</fullName>
                </value>
                <value>
                    <fullName>M.I.K</fullName>
                </value>
                <value>
                    <fullName>Maximus</fullName>
                </value>
                <value>
                    <fullName>Misys Summit</fullName>
                </value>
                <value>
                    <fullName>mPower</fullName>
                </value>
                <value>
                    <fullName>Multifonds</fullName>
                </value>
                <value>
                    <fullName>Murex</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CollateralDeliveryDate__c</fullName>
        <description>SFDC1-523 - Additional Account Fields - MSF Data</description>
        <inlineHelpText>Date MSF started receiving the Collateral data from the customer</inlineHelpText>
        <label>Collateral Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CollateralStatus__c</fullName>
        <description>SFDC1-523 - Additional Account Fields - MSF Data</description>
        <inlineHelpText>Status of MSF Data Onboarding Process of the Collateral data from this customer (if applicable)</inlineHelpText>
        <label>Collateral Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agreed in principle</fullName>
                </value>
                <value>
                    <fullName>Contacted</fullName>
                </value>
                <value>
                    <fullName>Delivered via Pirum</fullName>
                </value>
                <value>
                    <fullName>Delivered via triparty agent</fullName>
                </value>
                <value>
                    <fullName>Not contacted</fullName>
                </value>
                <value>
                    <fullName>Not interested</fullName>
                </value>
                <value>
                    <fullName>Onboarded</fullName>
                </value>
                <value>
                    <fullName>Partially onboarded</fullName>
                </value>
                <value>
                    <fullName>Work in progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomerReportingSystem__c</fullName>
        <description>SFDC1-785 Addition Account Fields - General Info</description>
        <inlineHelpText>Reporting system used by the customer</inlineHelpText>
        <label>Customer Reporting System</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Actuate</fullName>
                </value>
                <value>
                    <fullName>Business Objects</fullName>
                </value>
                <value>
                    <fullName>Cognos</fullName>
                </value>
                <value>
                    <fullName>Crystal</fullName>
                </value>
                <value>
                    <fullName>DeskNet</fullName>
                </value>
                <value>
                    <fullName>Eagle - Client Reporting</fullName>
                </value>
                <value>
                    <fullName>Equipos</fullName>
                </value>
                <value>
                    <fullName>Fundworks</fullName>
                </value>
                <value>
                    <fullName>IBI Webfocus</fullName>
                </value>
                <value>
                    <fullName>Information Builders</fullName>
                </value>
                <value>
                    <fullName>Internally Developed</fullName>
                </value>
                <value>
                    <fullName>Kurtosys</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Proprietary</fullName>
                </value>
                <value>
                    <fullName>Simcorp Dimension</fullName>
                </value>
                <value>
                    <fullName>SS&amp;C Pages</fullName>
                </value>
                <value>
                    <fullName>SSRS</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Vermillion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DataComments__c</fullName>
        <description>SFDC1-523 - Additional Account Fields - MSF Data</description>
        <inlineHelpText>Comments/Notes field from MSF Data Onboarding team</inlineHelpText>
        <label>Data Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DataContractualTerms__c</fullName>
        <description>SFDC1-523 - Additional Account Fields - MSF Data</description>
        <inlineHelpText>Contractual terms that the customer is required to comply to in relation to their contract for MSF for data submission</inlineHelpText>
        <label>Data Contractual Terms</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DataFeeds__c</fullName>
        <description>SFDC1-785 Addition Account Fields - General Info</description>
        <inlineHelpText>Datafeeds ingested by the customer</inlineHelpText>
        <label>Data Feeds</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alacra</fullName>
                </value>
                <value>
                    <fullName>Argos</fullName>
                </value>
                <value>
                    <fullName>Avox</fullName>
                </value>
                <value>
                    <fullName>Barclays</fullName>
                </value>
                <value>
                    <fullName>Barclays Point</fullName>
                </value>
                <value>
                    <fullName>Bloomberg</fullName>
                </value>
                <value>
                    <fullName>Bloomberg (ref/corp action/ownership)</fullName>
                </value>
                <value>
                    <fullName>Bloomberg (sec, equity &amp; fixed price)</fullName>
                </value>
                <value>
                    <fullName>Bloomberg BO</fullName>
                </value>
                <value>
                    <fullName>Bloomberg PS</fullName>
                </value>
                <value>
                    <fullName>CDS</fullName>
                </value>
                <value>
                    <fullName>CME</fullName>
                </value>
                <value>
                    <fullName>Computershare</fullName>
                </value>
                <value>
                    <fullName>Copps Clark</fullName>
                </value>
                <value>
                    <fullName>Credit Module</fullName>
                </value>
                <value>
                    <fullName>Credit Risk</fullName>
                </value>
                <value>
                    <fullName>Datastream</fullName>
                </value>
                <value>
                    <fullName>Dominion Credit Ratings</fullName>
                </value>
                <value>
                    <fullName>Dun and Bradstreet</fullName>
                </value>
                <value>
                    <fullName>EFA price</fullName>
                </value>
                <value>
                    <fullName>Eurex</fullName>
                </value>
                <value>
                    <fullName>Exshare</fullName>
                </value>
                <value>
                    <fullName>Factset</fullName>
                </value>
                <value>
                    <fullName>Fitch</fullName>
                </value>
                <value>
                    <fullName>FTID</fullName>
                </value>
                <value>
                    <fullName>Heren</fullName>
                </value>
                <value>
                    <fullName>ICAP Broker Pages</fullName>
                </value>
                <value>
                    <fullName>ICB (sector details)</fullName>
                </value>
                <value>
                    <fullName>IDC</fullName>
                </value>
                <value>
                    <fullName>IDC (corp actions)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DataManagementSystem__c</fullName>
        <description>SFDC1-785 Addition Account Fields - General Info</description>
        <label>Data Management System</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ab Initio</fullName>
                </value>
                <value>
                    <fullName>AIM - Gain Software</fullName>
                </value>
                <value>
                    <fullName>Asset Control - AC+</fullName>
                </value>
                <value>
                    <fullName>Asset Control - ACInvest</fullName>
                </value>
                <value>
                    <fullName>Biztalk</fullName>
                </value>
                <value>
                    <fullName>Charles River Data Service</fullName>
                </value>
                <value>
                    <fullName>Eagle Pace for Warehouse</fullName>
                </value>
                <value>
                    <fullName>Eagle SRM or Pricing</fullName>
                </value>
                <value>
                    <fullName>Golden Source</fullName>
                </value>
                <value>
                    <fullName>Indus Valley Partners (I.V.P.)</fullName>
                </value>
                <value>
                    <fullName>Informatica</fullName>
                </value>
                <value>
                    <fullName>Intalus</fullName>
                </value>
                <value>
                    <fullName>Internally developed system</fullName>
                </value>
                <value>
                    <fullName>M.I.K</fullName>
                </value>
                <value>
                    <fullName>Markit EDM</fullName>
                </value>
                <value>
                    <fullName>Netik</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Paladyne</fullName>
                </value>
                <value>
                    <fullName>PolarLake</fullName>
                </value>
                <value>
                    <fullName>Princeton</fullName>
                </value>
                <value>
                    <fullName>Reference Data Factory</fullName>
                </value>
                <value>
                    <fullName>Simcorp Dimension</fullName>
                </value>
                <value>
                    <fullName>Smartco</fullName>
                </value>
                <value>
                    <fullName>Sterci</fullName>
                </value>
                <value>
                    <fullName>ThompsonReuters EDM - TREP</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Xenomorph</fullName>
                </value>
                <value>
                    <fullName>Zema</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DataProvision__c</fullName>
        <description>SFDC1-523 - Additional Account Fields - MSF Data</description>
        <inlineHelpText>To identify if this customer provides us with Securities Finance Data  - i.e. are they contributing to the database</inlineHelpText>
        <label>Data Provision</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DataWarehouse__c</fullName>
        <description>SFDC1-785 Addition Account Fields - General Info</description>
        <label>Data Warehouse</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Asset Control</fullName>
                </value>
                <value>
                    <fullName>Eagle PACE</fullName>
                </value>
                <value>
                    <fullName>EDM Data Store</fullName>
                </value>
                <value>
                    <fullName>Indus Valley Partners (I.V.P.)</fullName>
                </value>
                <value>
                    <fullName>Internally Developed Warehouse</fullName>
                </value>
                <value>
                    <fullName>M.I.K</fullName>
                </value>
                <value>
                    <fullName>Netik</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Oracle (MDS)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Teradata</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Xenomorph</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DateOnboarded__c</fullName>
        <description>SFDC1-523 - Additional Account Fields - MSF Data</description>
        <inlineHelpText>Date MSF started receiving the customer&apos;s data to ingest into our database (into production)</inlineHelpText>
        <label>Date Onboarded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EDMSalesperson__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-5452 EDM Salesperson</description>
        <inlineHelpText>Lookup to a User that indicates the EDM Salesperson for the Account.</inlineHelpText>
        <label>EDM Salesperson</label>
        <referenceTo>User</referenceTo>
        <relationshipName>EDMSalesAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FrontOfficeSystem__c</fullName>
        <description>SFDC1-785 Addition Account Fields - General Info</description>
        <label>Front Office System</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advent</fullName>
                </value>
                <value>
                    <fullName>Allocare</fullName>
                </value>
                <value>
                    <fullName>Black Mountain Everest</fullName>
                </value>
                <value>
                    <fullName>Blackrock Aladdin</fullName>
                </value>
                <value>
                    <fullName>Bloomberg AIM</fullName>
                </value>
                <value>
                    <fullName>Calypso</fullName>
                </value>
                <value>
                    <fullName>Charles River</fullName>
                </value>
                <value>
                    <fullName>Endur</fullName>
                </value>
                <value>
                    <fullName>Enfusion Integrata</fullName>
                </value>
                <value>
                    <fullName>Equalizer</fullName>
                </value>
                <value>
                    <fullName>EzeCastle</fullName>
                </value>
                <value>
                    <fullName>Factset</fullName>
                </value>
                <value>
                    <fullName>Finacle Treasury</fullName>
                </value>
                <value>
                    <fullName>Flextrade</fullName>
                </value>
                <value>
                    <fullName>Geneva Moxy</fullName>
                </value>
                <value>
                    <fullName>Indus Valley Partners (I.V.P.)</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Internal Build</fullName>
                </value>
                <value>
                    <fullName>IRESS Portfolio/Order System</fullName>
                </value>
                <value>
                    <fullName>Latent Zero</fullName>
                </value>
                <value>
                    <fullName>Linedata</fullName>
                </value>
                <value>
                    <fullName>Liquidity Book</fullName>
                </value>
                <value>
                    <fullName>LongView Trading</fullName>
                </value>
                <value>
                    <fullName>M.I.K</fullName>
                </value>
                <value>
                    <fullName>MacGregor XIP</fullName>
                </value>
                <value>
                    <fullName>Murex</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Odyssey - TripleA</fullName>
                </value>
                <value>
                    <fullName>OpenLink Findur</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IntradayDeliveryDate__c</fullName>
        <description>SFDC1-523 - Additional Account Fields - MSF Data</description>
        <inlineHelpText>Date MSF started receiving the Intraday trades data from the customer</inlineHelpText>
        <label>Intraday Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IntradayStatus__c</fullName>
        <description>SFDC1-2071 This field is populated manually</description>
        <inlineHelpText>Status of MSF Data Onboarding Process of the Intraday trades from this customer (if applicable)</inlineHelpText>
        <label>Intraday Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agreed in Principle</fullName>
                </value>
                <value>
                    <fullName>Contacted</fullName>
                </value>
                <value>
                    <fullName>Delivered via Pirum</fullName>
                </value>
                <value>
                    <fullName>Interested in contributing via Pirum</fullName>
                </value>
                <value>
                    <fullName>Not Contacted</fullName>
                </value>
                <value>
                    <fullName>Not Interested</fullName>
                </value>
                <value>
                    <fullName>Onboarded</fullName>
                </value>
                <value>
                    <fullName>Partially Onboarded</fullName>
                </value>
                <value>
                    <fullName>Work in Progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KY3P__c</fullName>
        <description>SFDC1-785 Addition Account Fields - General Info</description>
        <inlineHelpText>Type of KY3P Account or relationship to IHS Markit from a KY3P perspective</inlineHelpText>
        <label>KY3P</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Vendor</fullName>
                </value>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Vendor &amp; Consumer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LegacyIDUnique__c</fullName>
        <description>Added as part of migration exercise by Paras</description>
        <externalId>true</externalId>
        <label>LegacyIDUnique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <description>Added as part of migration exercise by Paras</description>
        <externalId>true</externalId>
        <label>LegacyID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacySystem__c</fullName>
        <description>Added as part of migration exercise by Paras</description>
        <label>LegacySystem</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LegacySystem</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LiveCMBrokers__c</fullName>
        <description>SFDC1-1066 Live CM Brokers is calculated by the number of related &quot;CM Relationships&quot; records where Account Status is &quot;Live&quot;</description>
        <inlineHelpText>Live CM Brokers is calculated by the number of related &quot;CM Relationships&quot; records where Account Status is &quot;Live&quot;</inlineHelpText>
        <label>Live CM Brokers</label>
        <summaryFilterItems>
            <field>CMRelationship__c.AccountStatus__c</field>
            <operation>equals</operation>
            <value>Live</value>
        </summaryFilterItems>
        <summaryForeignKey>CMRelationship__c.Client__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MRMAccountComments__c</fullName>
        <description>SFDC1-1066 Additional Account Fields - MRM Account Comments</description>
        <inlineHelpText>Comments/Notes field in respect of MRM for this account</inlineHelpText>
        <label>MRM Account Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MRMProductsUsed__c</fullName>
        <description>SFDC1-1066 Additional Account Fields - MRM Products Used</description>
        <inlineHelpText>Products from the MRM Suite that this customer subscribes to</inlineHelpText>
        <label>MRM Products Used</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Calendar</fullName>
                </value>
                <value>
                    <fullName>Commission Manager</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Hub</fullName>
                </value>
                <value>
                    <fullName>Research Payment</fullName>
                </value>
                <value>
                    <fullName>Research Questionnaire</fullName>
                </value>
                <value>
                    <fullName>Vote</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MRMRelationshipManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-1066 Additional Account Fields - MRM Relationship Manager
Recreated it as a lookup to user</description>
        <inlineHelpText>Lookup to a User that indicates the MRM Relationship Manager for the Account.</inlineHelpText>
        <label>MRM Relationship Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MRMAdditionalAccountFields</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MSFASubSegment__c</fullName>
        <description>SFDC1-523 - Additional Account Fields - MSF Data</description>
        <label>MSFA Sub Segment</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Academic</fullName>
                </value>
                <value>
                    <fullName>Beneficial Owner</fullName>
                </value>
                <value>
                    <fullName>Borrower</fullName>
                </value>
                <value>
                    <fullName>Buy Side</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Lender</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Partnership</fullName>
                </value>
                <value>
                    <fullName>Regulator/supranational/industry body</fullName>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MSFContractedYear__c</fullName>
        <description>SFDC1-523 - Additional Account Fields - MSF Data</description>
        <label>MSF Contracted Year</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSFType__c</fullName>
        <description>SFDC1-523 - Additional Account Fields - MSF Data</description>
        <inlineHelpText>Flag to identify if they are an MSF Customer, prospect, Academic etc. (Not all accounts in salesforce will be an MSF Customer so this is used for reporting on customers of MSF)</inlineHelpText>
        <label>MSF Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Academic</fullName>
                </value>
                <value>
                    <fullName>Academic Customer</fullName>
                </value>
                <value>
                    <fullName>Corporate/IR</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Lost Customer</fullName>
                </value>
                <value>
                    <fullName>Lost Prospect</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Press</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                </value>
                <value>
                    <fullName>Wrong Customer Type</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>